--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
             <div class="navbar-btn-brand">
                 <button class="btn btn-login"><a class="text-green" href="#">Login</a></button>
-                <button class="btn btn-join-us">
+                <button class="btn btn-join-us-one">
                     <a class="text-white" href="#">Join Us <i class="fa-solid fa-arrow-right"></i></a></a>
                 </button>
             </div>
@@ -37,8 +37,8 @@
             <h1>Best Learning Opportunities </h1>
             <h4>Our goal is to make online education work for everyone</h4>
             <div class="btn-section-1">
-                <button class="btn btn-join-us-one"><a href="">Join Us</a></button>
-                <button class="btn btn-join-us"><a href="">Learn More</a></button>
+                <button class="btn btn-join-us-one"><a class="text-white" href="#">Join Us</a></button>
+                <button class="btn btn-join-us"><a class="text-green" href="#">Learn More</a></button>
             </div>
         </div>
         <div class="col-md-6">
