--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             </div>
         </div>
     </div>
-    <div class="section pb-75 pt-30 main">
+    <div class="section pb-75 pt-30 main just-center">
         <div class="container-subcribe">
             <div class="container-row">
                 <div class="main-content-subcribe">
